# magpie-ollama-datagen

./: .gitignore  pyproject.toml  readme.md
src/: data_gen.py
src/services/: filtering.py
